# like_and_subscribe

./: .envrc  .gitignore  Architecture.excalidraw  Cargo.toml  Cross.toml  like_and_subscribe.service  tailscale.sh
crates/entity/: Cargo.toml  generate.sh
crates/entity/src/: active_subscriptions.rs  known_channels.rs  known_videos.rs  lib.rs  o_auth.rs  prelude.rs  subscription_queue.rs  subscription_queue_result.rs  video_queue.rs  video_queue_result.rs
crates/entity_types/: Cargo.toml
crates/entity_types/src/: jiff_compat.rs  lib.rs  subscription_queue.rs
crates/jiff_sea-orm_compat/: Cargo.toml
crates/jiff_sea-orm_compat/src/: lib.rs
crates/like_and_subscribe/: Cargo.toml
crates/like_and_subscribe/src/: database.rs  feed.rs  main.rs  oauth.rs  old_subscription.rs  playlist.rs  pubsub.rs  subscription.rs  web.rs
crates/like_and_subscribe/src/actor/: email.rs  mod.rs  pubsubhubbub.rs  subscription.rs
crates/like_and_subscribe/src/actor/pubsubhubbub/: mod.rs  queue.rs  refresh.rs
crates/like_and_subscribe/src/actor/web/: dashboard.rs  mod.rs  pubsub.rs
crates/like_and_subscribe/src/playlist/: shorts.rs
crates/like_and_subscribe/src/web/: pubsub.rs
crates/like_and_subscribe/static/: styles.css
crates/like_and_subscribe/templates/: dashboard.html
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20250901_000001_create_tables.rs  main.rs
examples/: refresh_token.rs
src/: feed.rs  main.rs  playlist.rs  pubsub.rs  subscription.rs
src/playlist/: shorts.rs
test_data/: sample_video.xml
