[workspace]
resolver        = "3"
members         = ["crates/*"]
default-members = ["crates/like_and_subscribe"]

[workspace.dependencies]
migration    = { version = "0.1.0", path = "crates/migration" }
entity       = { version = "0.1.0", path = "crates/entity" }
entity_types = { version = "0.1.0", path = "crates/entity_types" }

tokio        = { version = "1.47.0", features = ["full"] }
sea-orm      = { version = "1.1.14", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde        = "1.0.219"
serde_derive = "1.0.219"
jiff         = { version = "0.2.15", features = ["serde"] }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre         = "0.6.5"
