[package]
name    = "like_and_subscribe"
version = "0.1.0"
edition = "2024"

[dependencies]
# Enable bindgen feature on indirect dependency
axum                = "0.8.4"
axum-extra          = { version = "0.10.1", features = ["error-response", "typed-header"] }
bstr                = "1.12.0"
color-eyre          = { workspace = true }
entity              = { workspace = true }
futures             = "0.3.31"
google-youtube3     = { version = "6.0.0", default-features = false }
jiff                = { workspace = true }
jiff_sea-orm_compat = { workspace = true }
migration           = { workspace = true }
mime                = "0.3.17"
monostate           = "0.1.14"
quick-xml           = { version = "0.38.0", features = ["serialize"] }
reqwest             = { version = "0.12.22", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "http2", "json", "rustls-tls-native-roots", "system-proxy", "zstd"] }
sea-orm             = { workspace = true }
serde               = { workspace = true }
serde_derive        = { workspace = true }
serde_json          = "1.0.141"
tokio               = { workspace = true }
tokio-util          = { version = "0.7.16", features = ["rt"] }
tower               = { version = "0.5.2", features = ["buffer", "limit"] }
tower-http          = { version = "0.6.6", features = ["fs", "trace"] }
tracing             = "0.1.41"
tracing-error       = "0.2.1"
tracing-journald    = "0.3.1"
tracing-subscriber  = { workspace = true }
