[package]
name    = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
color-eyre         = { workspace = true }
lexopt             = "0.3.1"
sea-orm            = { workspace = true }
sea-orm-migration  = { version = "1.1.0", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
